fixed z-index on read free

--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,7 @@ li, h1, p, label{
     top: 0;
     background-color: black;
     height: 220px;
+    z-index: 100;
 }
 
 .main-title-name {
@@ -273,7 +274,7 @@ li, h1, p, label{
 .read-free-section {
     grid-row: 2 / 4;
     grid-column: 2 /4;
-    /* z-index: -1; */
+    z-index: 1;
 }
 
 .published-work-card {
